fix grid-gap for place

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -10,14 +10,14 @@
 @media screen and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px 1fr;
-    grid-gap: 48px 32px;
+    gap: 48px 32px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place {
     grid-template-columns: 340px 1fr;
-    grid-gap: 48px 28px;
+    gap: 48px 28px;
     padding: 0 24px;
   }
 }
@@ -25,7 +25,7 @@
 @media screen and (max-width: 767px) {
   .place {
     grid-template-columns: 1fr;
-    grid-gap: 32px;
+    gap: 32px;
     padding: 0;
   }
 }
